update styling and layout

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 					<h1>Benjamin Rose</h1>
 					<p>Software Engineer</p>
 					<ul class="actions special">
-						<li><a href="#one" class="button scrolly">Discover</a></li>
+						<li><a href="#one" class="button scrolly">Learn More</a></li>
 					</ul>
 				</div>
 			</section>
