update header and footer styling

--- a/index.html
+++ b/index.html
@@ -23,9 +23,11 @@
 		<!-- Header -->
 			<section id="header">
 				<div class="inner">
-					<span class="icon solid major fa-code"></span>
-					<h1>Benjamin Rose</h1>
-					<p>Software Engineer</p>
+					<div class="header-content">
+						<span class="icon solid major fa-code"></span>
+						<h1>Benjamin Rose</h1>
+						<p>Software Engineer</p>
+					</div>
 					<ul class="actions special">
 						<li><a href="#one" class="button scrolly">Learn More</a></li>
 					</ul>
