add resume pdf to site

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 							If I’m not at my keyboard, you’re most likely to find me either exploring the
 							outdoors or trying to expand my horizons with a new recipe in the kitchen.</p>
 							<ul class="actions">
-								<li><a href="#" class="button primary icon solid fa-download">Resume</a></li>
+								<li><a href="./assets/Rose_Benjamin_Resume.pdf" target="_blank" class="button primary icon solid fa-download">Resume</a></li>
 							</ul>
 						</div>
 						<div class="col-4 col-12-medium imp-medium flex-col">
@@ -258,7 +258,7 @@
 					</header>
 					<ul class="actions special">
 						<li><a href="mailto:benrose207@gmail.com" class="button wide primary">Email</a></li>
-						<li><a href="#" class="button wide">Resume</a></li>
+						<li><a href="./assets/Rose_Benjamin_Resume.pdf" target="_blank" class="button wide">Resume</a></li>
 					</ul>
 				</div>
 			</section>
