fix typo in project description

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 								<h2>About</h2>
 							</header>
 							<p>I am a software engineer with a passion for building things that are sustainable
-							and user-focused. I have experience working with JavaScript, React / Redux, Ruby
+							and user-focused. I have experience working with JavaScript, React, Redux, Ruby
 							on Rails, Node.js, SQL, and MongoDB, in addition to HTML and CSS. My current
 							project is a single-page app that allows users to search for and review hikes,
 							integrating the MapBox API and AWS S3 storage for an interactive and scalable
@@ -140,8 +140,8 @@
 							<h3>AllHikes</h3>
 							<p>Site on which users can find information about hikes, as well as add
 								reviews and
-								photos. Inspired by AllTrails.com. Built with Javascript, React /
-								Redux, Ruby on Rails, postreSQL, AWS S3, & MapBox API.</p>
+								photos. Inspired by AllTrails.com. Built with JavaScript, React, 
+								Redux, Ruby on Rails, PostgreSQL, AWS S3, & MapBox API.</p>
 							<ul class="actions">
 								<li>
 									<a 
@@ -192,8 +192,7 @@
 									alt="ReBond app screenshot" /></span>
 							<h3>ReBond</h3>
 							<p>An app to facilitate meetups between already-established groups of
-								people, based
-								on personal interests and passions. Built with React / Redux,
+								people, based on personal interests and passions. Built with React, Redux,
 								JavaScript, Node.js, Express.js, MongoDB, & Materialize CSS.</p>
 							<ul class="actions">
 								<li>
